--- a/src/components/movie-view/movie-view.scss
+++ b/src/components/movie-view/movie-view.scss
@@ -1,8 +1,21 @@
+.movie-view {
+  margin: 0px 50px;
+}
+
 .movie-poster {
-  width: 25%;
+  width: 50%;
+  margin: 20px auto;
+}
+
+.label-title {
+  font-size: 40px;
+}
+
+.label-body {
+  font-size: 16px;
 }
 
 .return-button {
-  margin: 15px;
-  font-size: 12px;
+  margin: auto;
+  margin-bottom: 20px;
 }
