--- a/src/components/registration-view/registration-view.scss
+++ b/src/components/registration-view/registration-view.scss
@@ -6,3 +6,9 @@
 .register-header {
   text-align: center;
 }
+
+// same styling for the "Not Registered?" button in Login View
+.swap-button {
+  display: block;
+  margin: 20px auto 0px;
+}
