--- a/src/components/movie-view/movie-view.scss
+++ b/src/components/movie-view/movie-view.scss
@@ -1,5 +1,6 @@
 .movie-view {
-  margin: 0px 50px;
+  margin: 40px;
+  text-align: center;
 }
 
 .movie-poster {
@@ -15,7 +16,14 @@
   font-size: 16px;
 }
 
-.return-button {
-  margin: auto;
-  margin-bottom: 20px;
+.returnButton {
+  display: block;
+  margin: 20px auto;
+}
+
+.directorButton,
+.genreButton,
+.addFavButton {
+  display: inline;
+  margin: 20px 10px;
 }
