MovieCard grid styling

--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -1,6 +1,13 @@
+.movieCard-col {
+  margin-top: 10px;
+}
+
 .movie-card {
-  margin: 10px 0px;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
 .movie-img {
