--- a/src/components/profile-view/profile-view.scss
+++ b/src/components/profile-view/profile-view.scss
@@ -7,3 +7,12 @@
   font-size: 30px;
   padding: 5px;
 }
+
+.remove-favorite,
+.view-movie {
+  margin: 0 10px;
+}
+
+.card-content {
+  margin: 0 auto;
+}
