--- a/src/components/genre-view/genre-view.scss
+++ b/src/components/genre-view/genre-view.scss
@@ -2,6 +2,8 @@
   margin: 30px;
 }
 
-.genre-view-movies-flex {
-  display: flex;
+@media all and (min-width: 768px) {
+  .genre-view-movies-flex {
+    display: flex;
+  }
 }
