--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -11,7 +11,10 @@
 }
 
 .movie-img {
-  padding: 5px;
+  margin-top: 20px;
+  width: 75%;
+  border-radius: 5%;
+  border: 2px solid #5bc0de;
 }
 
 .more-button {
