--- a/src/components/director-view/director-view.scss
+++ b/src/components/director-view/director-view.scss
@@ -2,6 +2,12 @@
   margin: 30px;
 }
 
+.director-card,
+.director-moreMovies {
+  border: 2px solid;
+  margin-top: 10px;
+}
+
 .director-bio {
   margin: 10px 0px;
 }
