--- a/src/components/genre-view/genre-view.scss
+++ b/src/components/genre-view/genre-view.scss
@@ -2,6 +2,12 @@
   margin: 30px;
 }
 
+.genre-card,
+.genres-moreMovies {
+  border: 2px solid;
+  margin-top: 10px;
+}
+
 @media all and (min-width: 768px) {
   .genre-view-movies-flex {
     display: flex;
