--- a/src/components/profile-view/profile-view.scss
+++ b/src/components/profile-view/profile-view.scss
@@ -3,6 +3,11 @@
   text-align: center;
 }
 
+.profile-card,
+.update-card {
+  border: 2px solid;
+}
+
 .profile-title {
   font-size: 30px;
   padding: 20px;
