Styling changes due to MovieCard --> MovieList
Looped mainview through MovieList, which accesses MovieCard, as such, styling needed to alter to match new format

still having some trouble getting a true grid side by side card set up in GenreView and DirectorView.

Styling in ProfileView for spacing

--- a/src/components/director-view/director-view.scss
+++ b/src/components/director-view/director-view.scss
@@ -2,18 +2,23 @@
   margin: 30px;
 }
 
+.director-bio {
+  margin: 10px 0px;
+}
+
 .director-card,
 .director-moreMovies {
   border: 2px solid;
   margin-top: 10px;
 }
 
-.director-bio {
-  margin: 10px 0px;
+.director-view-movies-flex {
+  width: 50%;
+  align-self: center;
 }
 
-@media all and (min-width: 768px) {
+@media all and (max-width: 768px) {
   .director-view-movies-flex {
-    display: flex;
+    width: 100%;
   }
 }
