--- a/src/components/genre-view/genre-view.scss
+++ b/src/components/genre-view/genre-view.scss
@@ -8,8 +8,13 @@
   margin-top: 10px;
 }
 
-@media all and (min-width: 768px) {
+.genre-view-movies-flex {
+  width: 50%;
+  align-self: center;
+}
+
+@media all and (max-width: 768px) {
   .genre-view-movies-flex {
-    display: flex;
+    width: 100%;
   }
 }
