--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -1,14 +1,10 @@
-.movieCard-col {
-  margin: 10px 0px;
-}
-
 .movie-card {
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
   border: 2px solid;
+  margin: 5px;
 }
 
 .movie-img {
