--- a/src/components/profile-view/profile-view.scss
+++ b/src/components/profile-view/profile-view.scss
@@ -12,6 +12,15 @@
   font-size: 30px;
   padding: 20px;
 }
+.card-subtitle-update {
+  text-align: center;
+  margin: 0 30px;
+}
+
+.password-instructions {
+  display: block;
+  margin-top: 10px;
+}
 
 .card-content {
   margin: 0 auto;
